RESOLVED FIXED231376
CSSProperties.json should not require a 'converter' for color properties
https://bugs.webkit.org/show_bug.cgi?id=231376
Summary CSSProperties.json should not require a 'converter' for color properties
Aditya Keerthi
Reported 2021-10-07 10:57:49 PDT
...
Attachments
Patch (7.21 KB, patch)
2021-10-07 19:04 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-10-07 19:00:24 PDT
Renamed from "makeprop.pl should support 'auto-functions' for color properties", since it technically already does. The only issue was an incorrect value setter, which can be fixed by specifying a 'converter'. However, I feel 'converter' is redundant for 'color-property', given that we already know we need to cover to a Color.
Aditya Keerthi
Comment 2 2021-10-07 19:00:46 PDT
(In reply to Aditya Keerthi from comment #1) > Renamed from "makeprop.pl should support 'auto-functions' for color > properties", since it technically already does. The only issue was an > incorrect value setter, which can be fixed by specifying a 'converter'. > > However, I feel 'converter' is redundant for 'color-property', given that we > already know we need to cover to a Color. s/cover/convert/
Aditya Keerthi
Comment 3 2021-10-07 19:04:27 PDT
Radar WebKit Bug Importer
Comment 4 2021-10-14 10:58:15 PDT
Antti Koivisto
Comment 5 2021-10-14 11:40:32 PDT
Comment on attachment 440565 [details] Patch nice!
EWS
Comment 6 2021-10-14 15:50:32 PDT
Committed r284207 (243018@main): <https://commits.webkit.org/243018@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440565 [details].
Note You need to log in before you can comment on or make changes to this bug.