CSSProperties.json should not require a 'converter' for color properties https://bugs.webkit.org/show_bug.cgi?id=231376

Reviewed by Antti Koivisto.

r283742 used StyleBuilderCustom to implement 'accent-color' as
specifying 'auto-functions' and 'color-property' resulted in an
incorrect value setter.

Upon further investigation, specifying 'converter: SVGColor'
solved the issue, as the CSSPrimitiveValue was then correctly
converted into a Color.

Rather than renaming the converter for use with non-SVG color
properties, this patch removes the existing color converter entirely,
as the need for color conversion can be inferred from the existence
of 'color-property'.

* css/CSSProperties.json:

Remove now unecessary 'converter', and use 'auto-functions' for
'accent-color' rather than 'custom'.

* css/makeprop.pl:
(generateValueSetter):

Perform Color conversion from CSSPrimitiveValue if 'color-property'
is specified.

* style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertSVGColor): Deleted.
* style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyInitialAccentColor): Deleted.
(WebCore::Style::BuilderCustom::applyInheritAccentColor): Deleted.
(WebCore::Style::BuilderCustom::applyValueAccentColor): Deleted.


Canonical link: https://commits.webkit.org/243018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284207 268f45cc-cd09-0410-ab3c-d52691b4dbfc